# client-desktop-shell-integration-dolphin

./: CMakeLists.txt  README.md  agents.md
.github/workflows/: main.yml
src/: CMakeLists.txt  ownclouddolphinactionplugin.cpp  ownclouddolphinactionplugin.desktop.in  ownclouddolphinactionplugin.h  ownclouddolphinactionplugin.json.in  ownclouddolphinoverlayplugin.cpp  ownclouddolphinoverlayplugin.json  ownclouddolphinpluginhelper.cpp  ownclouddolphinpluginhelper.h
